[tool.poetry]
name = "data-bake"
version = "0.1.0"
description = ""
authors = ["Paul Harrison <paul@harrison.sh>"]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cookies = "^0.6.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
