[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^21.5b1"
isort = "^5.8.0"
coverage = "^5.5"
flake8 = "^3.9.2"
pytest-flake8 = "^1.0.7"
pytest-black = "^0.3.12"
pytest-cov = "^2.12.0"
pytest-isort = "^2.0.0"
flake8-isort = "^4.0.0"
flake8-black = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py{{ cookiecutter.python_version|replace('.', '') }}"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.pytest_cache
    | \.git
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["{{ cookiecutter.package_name }}", "tests"]

[tool.coverage.run]
include = ["{{ cookiecutter.package_name }}/*"]
omit = ["tests/*"]
data_file = ".coverage"
relative_files = true

[tool.coverage.report]
precision = 2

[tool.pytest.ini_options]
addopts = "--cache-clear --cov"
testpaths = "tests"
